Fix a styling issue on smaller screen sizes

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -14,7 +14,7 @@
 
 body{
     background-color:#24292e;
-    padding:10px;
+    padding:30px;
     max-width:1024px;
     margin:0 auto;
 }
@@ -39,6 +39,9 @@ a{
     .section {
         display: flex;
     }
+    .section-content{
+        margin-left:30px!important;
+    }
 }
 @media screen and (max-width: 900px){
     .slideshow-container{
@@ -46,7 +49,7 @@ a{
     }
 }
 .header{
-    margin:100px;
+    margin:100px 0;
 }
 .section{
     margin-bottom:60px;
@@ -66,7 +69,7 @@ a{
 .section-content{
     text-align:left;
     flex: 1;
-    margin:auto 30px;
+    margin:auto;
 }
 .section h2, .section h3, .subtitle{
     margin:0;
